3-redics-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: voting-app
    name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis-pod
      app: voting-app
  template:
    metadata:
      name: redis-pod
      labels:
        name: redis-pod
        app: voting-app
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
