5-worker-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-app-deployment
  labels:
    app: voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: worker-app-pod
      app: voting-app
  template:
    metadata:
      name: worker-app-pod
      labels:
        name: worker-app-pod
        app: voting-app
    spec:
      containers:
      - name: worker-app
        image: dockersamples/examplevotingapp_worker
