4-redics-service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    name: redis-service
    app: voting-app
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    name: redis-pod
    app: voting-app
