miniproject-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: voting-ingress
  labels:
    app.kubernetes.io/name: voting-app-ingress
    app: voting-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listening-port: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: vote.somesh.xyz
      paths:
        - path: /
          pathType: prefix
          backend:
            service:
              name: voting-service
              port:
                number: 80
    - host: result.somesh.xyz
      paths:
        - path: /
          pathType: prefix
          backend:
            service:
              name: result-service
              port:
                number: 80
